tests/models/snapshots/can_find_by_id.snap
---
source: tests/models/sets.rs
expression: item
---
Model {
    created_at: 2022-06-02T11:00:00,
    updated_at: 2022-06-02T11:20:00,
    id: 33333333-3333-3333-3333-333333333333,
    creator_id: 11111111-1111-1111-1111-111111111111,
    dj_names: [
        "Jeff Mills",
        "Frankie Knuckles",
    ],
    venue: Some(
        "Marble Bar",
    ),
    city: Some(
        "Detroit",
    ),
    event_name: Some(
        "Movement Festival",
    ),
    event_date: 2022-05-27,
    doors_time: Some(
        2022-05-27T11:00:00,
    ),
    scheduled_start: Some(
        2022-05-28T03:00:00,
    ),
    actual_start: Some(
        2022-05-28T03:05:00,
    ),
    end_time: Some(
        2022-05-28T06:00:00,
    ),
    setlist: Some(
        Object {},
    ),
}
